# operaton-task-worker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cargo-publish.yml
operaton-task-worker-macros/: Cargo.toml
operaton-task-worker-macros/src/: lib.rs
src/: api.rs  lib.rs  main.rs  polling.rs  registry.rs  settings.rs  structures.rs  types.rs
src/handlers/: mod.rs
src/process_variables/: mod.rs
src/structures/: process_variables.rs
