[package]
name = "operaton-task-worker"
description = "A task worker for running service tasks with operaton"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio =  { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
url = { version = "2.5", features = ["default", "serde"] }
log = "0.4"
env_logger = "0.11"
serde_json = "1.0.145"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"